# rules_rust_build_dep_repro

./: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel
