load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

platform(
    name = "ios_arm64",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:ios",
        "@build_bazel_apple_support//constraints:device",
    ],
)

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    edition = "2021",
    deps = all_crate_deps(
        build = True,
    ),
)

rust_binary(
    name = "mime_guess_test",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = all_crate_deps(
        normal = True,
    ) + [
        ":build_script",
    ],
)
